# numiphy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
numiphy/: __init__.py
numiphy/findiffs/: __init__.py  finitedifferences.py  grids.py
numiphy/lowlevelsupport/: __init__.py  lowlevelcallables.py
numiphy/odesolvers/: __init__.py  _lowlevelode.pyi  lowlevelsupport.py  ode.py  ode_solvers.py  odepack.pyi  odes.py  orbits.py
numiphy/odesolvers/odepack/: arrays.cpp  arrays.hpp  henonheiles.cpp  odes.hpp  orbits.hpp  pyode.hpp
numiphy/pdes/: __init__.py  bounds.py  bvps.py  cached.py  ivps.py  linalg.py  qm.py
numiphy/symlib/: __init__.py  boolean.py  conditional.py  geom.py  hashing.py  inequalities.py  mathbase.py  mathfuncs.py  pylambda.py  symcore.py  symcore.pyi  vectorfields.py
numiphy/symlib/expressions/: __init__.py  pylambda.py  symexpr.py  symexpr.pyi  symmath.py  symmath.pyi  vectorfields.py  vectors2d.py
numiphy/symlib/operators/: __init__.py  operators.py  operators.pyi  opermath.pyi
numiphy/toolkit/: __init__.py  compile_tools.py  plotting.py  polygons.py  tools.py
tests/: lyapunov.ipynb  odeint.ipynb  test.py
