[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numiphy"
version = "1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib>=3.9.2"
]

[project.urls]
Homepage = "https://github.com/phyzan/numiphy"
Repository = "https://github.com/phyzan/numiphy.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["numiphy*"]
